feat: Add confluence loader to the extractor api lib
- Added an endpoint and a logic for loading confluence and returning it as an information piece
- Added an endpoint to load the confluence to the admin backend api lib
