# libs/extractor-api-lib/src/extractor_api_lib/api_endpoints/confluence_extractor.py
@@ -1,0 +1,13 @@
+from abc import ABC, abstractmethod
+
+from extractor_api_lib.models.confluence_parameters import ConfluenceParameters
+from extractor_api_lib.models.information_piece import InformationPiece
+
+
+class ConfluenceExtractor(ABC):
+    """Abstract base class for extract_from_confluence endpoint."""
+
+    @abstractmethod
+    async def aextract_from_confluence(self, confluence_parameters: ConfluenceParameters) -> list[InformationPiece]:
+        """Extract information from confluence, using the given confluence parameters"""
+        pass
